# Autonomous-Security-Robot

./: .gitignore  README.md
docs/: setup_guide.md
raspberry_pi/ros2_ws/config/: laser_filter.yaml
raspberry_pi/ros2_ws/src/web_pose/: package.xml  setup.py
raspberry_pi/ros2_ws/src/web_pose/launch/: robot_bringup.launch.py
raspberry_pi/ros2_ws/src/web_pose/resource/: web_pose
raspberry_pi/ros2_ws/src/web_pose/web_pose/: __init__.py  mpu6050_driver.py  uart_bridge.py
stm32/: robot_STM32.ino
web/: cam_stream.py  index.html
